# TouchTherapy-Commerce

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/models/: appointment.rs  equipment.rs  mod.rs  order.rs  roles.rs  service.rs  suppliers.rs  user.rs
domain/: Cargo.toml
domain/src/models/: auth.rs  cart.rs  category.rs  equipment.rs  mod.rs  order.rs  payment.rs  product.rs  roles.rs  service.rs  user.rs
ports/: Cargo.toml
ports/src/outbound/repository/: user.rs
server/: Cargo.toml
server/src/: main.rs
server/src/routes/: user.rs
web/: Cargo.toml  Dioxus.toml
