[workspace]
resolver = '2'
members = ["adapters", "core", "ports", "server", "web"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.89"

tt-core = { path = "./core" }
tt-adapters = { path = "./adapter" }
tt-ports = { path = "./ports" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
