[package]
name = "web"
version = "0.1.0"
authors = ["Bruno-Camargo-V3ktor <bruno.ferreira.v3ktor@gmail.com>"]
edition = "2021"


[dependencies]
dioxus = { version = "0.6", features = ["router"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
